# hello_clang

exercise/: CMakeLists.txt  README.md
exercise/lang/: CMakeLists.txt  l01.cpp
exercise/math/: CMakeLists.txt  exmath.cpp  exmath.h  m01.cpp  m02.cpp  m03.cpp  m04.cpp  m05.cpp  m06.cpp
exercise/src/: main.cpp
hello/: .gitignore  CMakeLists.txt  README.md
hello/include/: Hello.h
hello/src/: Hello.cpp  main.cpp
